<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>de.schmizzolin.maven.poms</groupId>
    <artifactId>parent</artifactId>
    <version>1.7.0</version>
    <relativePath />
  </parent>

  <packaging>jar</packaging>

  <groupId>de.schmizzolin</groupId>
  <artifactId>vierzwo</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <properties><java.major>25</java.major></properties>
  <developers>
    <developer>
      <name>Michael Hartmeier</name>
      <id>mlhartme</id>
      <url>http://github.com/mlhartme/</url>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/mlhartme/vierzwo.git</connection>
    <developerConnection>scm:git:https://github.com/mlhartme/vierzwo.git</developerConnection>
    <url>https://github.com/mlhartme/vierzwo</url>
    <tag>HEAD</tag>
  </scm>

  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.19.4</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21.0.1</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>de.schmizzolin.virzwo.Main</mainClass>
        </configuration>
      </plugin>
      <plugin>
        <groupId>net.oneandone.maven.plugins</groupId>
        <artifactId>application</artifactId>
        <version>1.8.2</version>
        <configuration>
          <name>vierzwo</name>
          <main>de.schmizzolin.vierzwo.Main</main>
          <options>"--module-path $JAVA_FX_HOME/lib --add-modules javafx.controls,javafx.fxml"</options>
          <overwrite>META-INF/substrate/config/*.json, META-INF/substrate/config/resourcebundles,
            META-INF/LICENSE, META-INF/NOTICE</overwrite>
          <remove>META-INF/versions/9/module-info.class, module-info.class</remove>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>25</source>
          <target>25</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
